--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="My CS8 Personal Website">
+  <meta name="author" content="862379306">
 
-  <title>John Doe - Business Administration</title>
+  <title>Alistair Fernandez - Industrial Organizational/Social Psychologist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/alistairfernandez.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,33 +51,37 @@
         </li>
       </ul>
     </div>
-  </div>
+    </div>
   </nav>
 
   <div class="container-fluid p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Alistair Fernandez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology📚</div>
+        <p class="lead mb-4">Reflecting on my personal development and career goals, so far I am really happy, grateful, empowered, and encouraged on how much progress I made in the past on attaining my goals before transferring to University of California, Riverside (UCR). After transferring to UCR from the community college I went to and while taking HASS 001 with Professor Stewert, my career goals as of typing this paper are either join the U.S. military and work until I satisfy the full retirement benefits, work in a private industry, like a consulting firm, or work in a non-profit organization. I am also interested in doing my own research where I want to explore my interests and to gain knowledge in the future. My career goals are related to my academic goals of obtaining a major in psychology and a minor in sociology for my undergraduate studies while for my graduate studies is obtaining a social based emphasis degree in psychology.<br><br>
 
-        Enter bio here<br><br>
+          Reflecting on my areas strengths they are commitment to diversity, equity, and inclusion (DEI), working with other people of different backgrounds, helping to lead a group, providing tips and helping others in a group assignment or project, learning from others how completing a task, and being creative on developing new ideas. I think by committing to these strengths in general, they could all help me in building my social and relationship skills when I am working with other people, like in a group project. I also think that these skills could help develop a community with other people with a common interest and/or values to develop a sense of connection and camaraderieship. Lastly, through building a skill of connecting with other people in a social network means I am able to exchange and to learn new ideas, new perspectives, and new viewpoints from other people with no judgment and being understanding.
+          <br><br>
 
-        Enter bio here
+          Although I have many of these strengths, I still wanted to focus on improving myself. Some of the key things I want to work on are becoming a leader for a group or creating a group, learning to develop self-care skills, being understanding and helpful to others, being more concise in communication, being better and more organized in planning an event or social gathering, and to satisfied on what I enjoy doing most! By focusing on these skills for self-improvement, I think I would improve my skills better in the future by being mindful of the progress I make. I also want to be more grateful and to be more proud of the progress I make in the future to know that I can do anything when facing challenges on who I am and my skills. Lastly, I want to better take care of myself through understanding my skills aren’t strongly perfect but they are excellent and I am worth it.
+          I am happy with these strengths but I also have some weaknesses too that I want to work on from my strengths. One of them is learning from other people as a model or as a mentor of self-development. However, an area I think needs little to no improvement is my value in DEI by joining the UCR well student organizations, studying abroad, or teaching an r course to interact with different types of people of all backgrounds.
+          After reflecting on my personal goals and my career goals, through taking the steps to accomplish them, I am taking the time to reflect on my skills, my strengths and my weaknesses, and learning to develop as a better person in the future and beyond!
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/alistair-fernandez-616940239/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/VividRyokoF18">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/vividryoko">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:afernandezf18@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,45 +99,43 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Experience with HTML and Lua<br>
+              • Experience with Microsoft Word, Excel, and Powerpoint<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Club Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://msjc.edu">Mt. San Jacinto College (MSJC)</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Club Member for MSJC Psychology Club, MSJC Gaming Club, MSJC SAGA, and MSJC International Students<br>
+              • Frequently participated in club events<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2019 - June 2022 at MSJC</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Club Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://msjc.edu">Mt. San Jacinto College (MSJC)</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
-          </p>
+              • Club Leader for MSJC Psychology Club and MSJC SAGA<br>
+              • Help to create and to run events<br>
+              • Help to explain club events to Student Government<br>
+              • Collaborated with different clubs and participated at different events<br>
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2019 - June 2022 at MSJC</span>
           </div>
         </div>
 
@@ -151,34 +153,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Mt. San Jacinto College</h3>
+            <div class="subheading mb-3">Associate's of Arts for Transfer Psychology</div>
+            <div>AA for Transfer in Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - June 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Mt. San Jacinto College</h3>
+            <div class="subheading mb-3">Associate's of Arts for Transfer Liberal Arts</div>
+            <div>AA for Transfer in Liberal Arts</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachelor's of Arts Psychology</div>
+            <div>BA in Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2022 - Present</span>
           </div>
         </div>
 
@@ -190,16 +192,21 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+          <center>
+            <img src="img/image1.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
+            <img src="img/image3.jpeg" width="500px">
+            <img src="img/image4.jpeg" width="500px"><br>
+            <img src="img/image5.jpeg" width="500px">
+            <img src="img/image6.jpeg" width="500px"><br>
+          </center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
-  document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+        document.write(new Date().getFullYear());
+      </script> John Doe</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -211,4 +218,5 @@
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
 </body>
+
 </html>
